// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render NoResult properly 1`] = `
.c0 {
  display: grid;
  position: relative;
  align-items: center;
  min-width: fit-content;
  outline: none;
  cursor: inherit;
}

.c0.c0:hover {
  z-index: 2;
}

.c0:nth-child(odd),
.c0:nth-child(odd)>* {
  background-color: #F7F8F9;
  color: #13181D;
}

.c0:nth-child(even),
.c0:nth-child(even)>* {
  background-color: #ffffff;
  color: #13181D;
}

.c2 {
  text-align: center;
  padding: 0.8rem 1.6rem;
  width: 200px;
}

.c1 {
  justify-content: center;
  align-items: center;
}

<div>
  <tr
    class="c0 c1"
  >
    <td
      class="c2"
      tablesize="S"
      width="200"
    >
      Dummy
    </td>
  </tr>
</div>
`;

exports[`Row should render NoResult with Card design also 1`] = `
.c0 {
  display: grid;
  position: relative;
  align-items: center;
  min-width: fit-content;
  outline: none;
  cursor: inherit;
  border: none;
  border-radius: 0.8rem;
  margin-left: 0.8rem;
  margin-right: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(96,120,144,0.2);
}

.c0,
.c0>* {
  background-color: #ffffff;
  color: #13181D;
}

.c0.c0.c0>*:first-child,
.c0.c0.c0>*:first-child::before {
  transition: border-radius 200ms ease-in;
  border-radius: 0.8rem 0 0 0.8rem;
}

.c0.c0.c0>*:first-child::before {
  width: 0.8rem;
}

.c0.c0.c0>*:last-child {
  border-radius: 0 0.8rem 0.8rem 0;
}

.c0.c0.c0>*:nth-last-child(2)::before {
  width: 0.8rem;
  border-radius: 0 0 0 0.8rem;
}

.c0:hover {
  box-shadow: 0 0.2rem 0.8rem rgba(96,120,144,0.35);
}

.c0:not(:last-child) {
  margin-bottom: 0.8rem;
}

.c2 {
  text-align: center;
  padding: 0.8rem 1.6rem;
  width: 200px;
}

.c1 {
  justify-content: center;
  align-items: center;
}

<div>
  <tr
    class="c0 c1"
  >
    <td
      class="c2"
      tablesize="S"
      width="200"
    >
      Dummy
    </td>
  </tr>
</div>
`;

exports[`Row should render row properly 1`] = `
.c0 {
  display: grid;
  position: relative;
  align-items: center;
  min-width: fit-content;
  outline: none;
  cursor: inherit;
}

.c0.c0:hover {
  z-index: 2;
}

.c0:nth-child(odd),
.c0:nth-child(odd)>* {
  background-color: #F7F8F9;
  color: #13181D;
}

.c0:nth-child(even),
.c0:nth-child(even)>* {
  background-color: #ffffff;
  color: #13181D;
}

<div>
  <tr
    class="c0"
  >
    Dummy
  </tr>
</div>
`;
